unit test for footer and img responsiveness for header fixed

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Study Overseas with CityMax Enterprises, The Leading Abroad Education Consultants. Get Admissions and study in Australia, Canada, Singapore, New Zealand, Ireland, UK.">
+  <meta name="keywords" content="CityMax Enterprises, CityMax, Study overseas, Immigration Consultant, Education Consultants, Kapurthala, Study in Canada, Study in Australia, Study in UK, Study in Singapore, Study in New Zealand">
+  <meta http-equiv="Cache-control" content="public">
+  <meta name="author" content="Puneet Kashyap">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
